# CSUST-bg

./: .gitignore  CMakeLists.txt  README.md  main.py
.github/workflows/: build-and-release.yml  build-and-release.yml.disable  manual-build.yml
docs/: github-action-usage.md
include/: network_requester.h  service_installer.h  wifi_manager.h  wifi_service.h
src/: main.cpp  network_requester.cpp  service_installer.cpp  wifi_manager.cpp  wifi_service.cpp
